--- a/src/assistant/Bundle.properties
+++ b/src/assistant/Bundle.properties
@@ -1,9 +1,12 @@
 
 HistoriqueTaskDialog.jPanel1.TabConstraints.tabTitle=tab1
 Assistant1.jTextField1.text=\ 
-Assistant1.jRadioButtonProcPlSql.text=Radio3
-Assistant1.jRadioButtonInsert.text=Radio2
+Assistant1.jLabel3.text=Texte
 Assistant1.jLabel4.text=Label
+Assistant1.jRadioButtonSelect.text=Radio1
+Assistant1.jRadioButtonInsert.text=Radio2
+Assistant1.jRadioButtonProcPlSql.text=Radio3
 Assistant2.jButton3.text=Button
 Assistant2.jButton4.text=Button
 Assistant2.jButton2.text=Cancel
+com.mobissime.andjety.windows.Bundle=Radio1
