--- a/src/com/mobissime/andjety/windows/Bundle.properties
+++ b/src/com/mobissime/andjety/windows/Bundle.properties
@@ -7,3 +7,5 @@ Assistant1.jLabel4.text=Label
 Assistant2.jButton3.text=Button
 Assistant2.jButton4.text=Button
 Assistant2.jButton2.text=Cancel
+Assistant1.jLabel3.text=Label
+com.mobissime.andjety.windows.Bundle=label
