--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -122,7 +122,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -130,8 +130,8 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
+javadoc.version=true
+javadoc.windowtitle=Andjety Javadoc
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
